2006-10-10 Kimmo
 PATCH: [ 1573933 ] Manual: Update introduction chapter
  Manual: Introduction.xml
 PATCH: [ 1573938 ] Manual: Update whatsnew for 2.6 release
  Manual: Whatsnew.xml
 Fix invalid links in Introduction, added in patch #1573933
  Manual: Introduction.xml

2006-10-07 Tim
 BUG: [ 1572388 ] Wrong link to regex.pdf
  Manual: Filters.xml

2006-10-03 Kimmo
 PATCH: [ 1569389 ] Manual: fix translations part
  Manual: Locales.xml
 PATCH: [ 1569400 ] Manual: Update About Doc chapter
  Manual: About_Doc.xml

2006-10-02 Tim
 PATCH: [ 1568943 ] Manual: Shows error for wrong "withads" argument
  Manual/build: build_html.bat
 PATCH: [ 1568945 ] Manual: Use <simpara> for all list items in Whatsnew
  Manual: WinMerge_help.xml
  Manual renamed file: Whatsnew_2_1.xml to Whatsnew.xml
 BUG: [ 1568946 ] Manual: Wrong link in "Install.xml"
  Manual: Install.xml

2006-09-29 Kimmo
 PATCH: [ 1567301 ] Manual: 64-bit ShellExtension installing
  Manual: Install.xml
 PATCH: [ 1567323 ] Manual: OpenPaths talks about ShellExtension
  Manual: Open_paths.xml
 PATCH: [ 1567345 ] Manual: Add documentation for location pane
  Manual: Compare_files.xml
  Manual/screenshots new file: filecomp_locpane.png

2006-09-25 Kimmo
 PATCH: [ 1564535 ] Manual: New folder compare screenshot
  Manual: Compare_dirs.xml Quick_start.xml
  Manual/screenshots new file: foldercomp1.png
  Manual/screenshots deleted file: dircomp1.gif
 PATCH: [ 1564623 ] Manual: New screenshots for file compare
  Manual: Compare_files.xml Quick_start.xml
  Manual/screenshots new files: file_headerbar1.png filecomp1.png
   filecomp_context1.png filecomp_inlinediff1.png linediff.png
   merge_menu.png
  Manual/screenshots deleted files: File_headerbar1.gif filecomp1.gif
   filecomp_context1.gif filecomp_inlinediff.gif linediff.gif
   Merge_menu.gif

2006-09-14 Tim
 PATCH: [ 1558909 ] Manual: New <screen> layout (XSL)
  Manual/css: all.css help.css print.css

2006-09-11 Kimmo
 Bump revision to 1.2.7 for beta release